@@ -2265,7 +2265,7 @@ def quiver(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    gci._current = ret
     hold(b)
     return ret
 if Axes.quiver.__doc__ is not None:
@@ -2291,6 +2291,27 @@ def quiver2(*args, **kwargs):
     return ret
 if Axes.quiver2.__doc__ is not None:
     quiver2.__doc__ = _shift_string(Axes.quiver2.__doc__) + """
+Addition kwargs: hold = [True|False] overrides default hold state"""
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
+def quiverkey(*args, **kwargs):
+    # allow callers to override the hold state by passing hold=True|False
+    b = ishold()
+    h = popd(kwargs, 'hold', None)
+    if h is not None:
+        hold(h)
+    try:
+        ret =  gca().quiverkey(*args, **kwargs)
+        draw_if_interactive()
+    except:
+        hold(b)
+        raise
+
+    hold(b)
+    return ret
+if Axes.quiverkey.__doc__ is not None:
+    quiverkey.__doc__ = _shift_string(Axes.quiverkey.__doc__) + """
 Addition kwargs: hold = [True|False] overrides default hold state"""
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
@@ -2523,6 +2544,7 @@ def winter():
     if im is not None:
         im.set_cmap(cm.winter)
     draw_if_interactive()
+
 
 
 
